--- a/Launcher/Launcher/VIew/LauncherView.xaml
+++ b/Launcher/Launcher/VIew/LauncherView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Launcher.VIew.LauncherView"
+﻿<UserControl x:Class="Launcher.LauncherView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
