--- a/Launcher/Launcher/VIew/UpdaterView.xaml
+++ b/Launcher/Launcher/VIew/UpdaterView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Launcher.VIew.UpdaterView_2_"
+﻿<UserControl x:Class="Launcher.UpdaterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -19,7 +19,7 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
-            <Button Content="Поехали" Grid.Row="3" Grid.Column="3"/>
+            <Button x:Name="Start" Content="Поехали" Grid.Row="3" Grid.Column="3"/>
             <ProgressBar Grid.Column="0" Grid.Row="3" Grid.ColumnSpan="3" Height="Auto"/>
             <WebBrowser  Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="4" Grid.RowSpan="3"></WebBrowser>
         </Grid>
