--- a/Launcher/Launcher/View/ShellView.xaml
+++ b/Launcher/Launcher/View/ShellView.xaml
@@ -9,14 +9,7 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Controls:MetroWindow.RightWindowCommands>
         <Controls:WindowCommands>
-            <Button Content="settings" />
-            <Button>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Margin="4 0 0 0"
-                   VerticalAlignment="Center"
-                   Text="deploy cupcakes" />
-                </StackPanel>
-            </Button>
+            <Button Content="About" />
         </Controls:WindowCommands>
     </Controls:MetroWindow.RightWindowCommands>
     <Grid>
