--- a/Launcher/Launcher/Views/ShellView.xaml
+++ b/Launcher/Launcher/Views/ShellView.xaml
@@ -1,4 +1,4 @@
-﻿<Controls:MetroWindow x:Class="Launcher.ShellView"
+﻿<Controls:MetroWindow x:Class="Launcher.Views.ShellView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
