--- a/Launcher/Launcher/Views/UpdaterView.xaml
+++ b/Launcher/Launcher/Views/UpdaterView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Launcher.UpdaterView"
+﻿<UserControl x:Class="Launcher.Views.UpdaterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
