--- a/Launcher/Launcher/Views/LauncherView.xaml
+++ b/Launcher/Launcher/Views/LauncherView.xaml
@@ -88,12 +88,12 @@
                 </ListBox>
             </Popup>
         </Grid>
-        <ListBox x:Name="ListBoxModules" Margin="0,0,0,0" Grid.Row="1" Grid.Column="0" Grid.RowSpan="7" Grid.ColumnSpan="7" ScrollViewer.HorizontalScrollBarVisibility="Hidden" 
+        <ListBox x:Name="Modules" Margin="0,0,0,0" Grid.Row="1" Grid.Column="0" Grid.RowSpan="7" Grid.ColumnSpan="1" ScrollViewer.HorizontalScrollBarVisibility="Hidden" 
                  ScrollViewer.VerticalScrollBarVisibility="Hidden"  Background="{DynamicResource AccentColorBrush}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <Panel x:Name="Song" Text="{Binding Path=title}"/>
+                        <TextBox x:Name="SelectedModule" Text="{Binding Path=}"/>
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
