--- a/Launcher/Launcher/UserControl/ListBoxModule.xaml
+++ b/Launcher/Launcher/UserControl/ListBoxModule.xaml
@@ -7,7 +7,8 @@
     <Grid Background="White" x:Name ="ListBoxModuleControlMainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="130"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition> 
+            <!--sdasda-->
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="130"></RowDefinition>
