--- a/Launcher/Launcher/Views/LauncherView.xaml
+++ b/Launcher/Launcher/Views/LauncherView.xaml
@@ -93,7 +93,7 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <TextBox x:Name="SelectedModule" Text="{Binding Path=}"/>
+                        <TextBox x:Name="SelectedModule" Text="{Binding Path=Name}"/>
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
