--- a/Launcher/Launcher/Views/LauncherView.xaml
+++ b/Launcher/Launcher/Views/LauncherView.xaml
@@ -88,12 +88,12 @@
                 </ListBox>
             </Popup>
         </Grid>
-        <ListBox x:Name="Modules" Margin="0,0,0,0" Grid.Row="1" Grid.Column="0" Grid.RowSpan="7" Grid.ColumnSpan="1" ScrollViewer.HorizontalScrollBarVisibility="Hidden" 
-                 ScrollViewer.VerticalScrollBarVisibility="Hidden"  Background="{DynamicResource AccentColorBrush}">
+        <ListBox x:Name="Modules" Margin="0,0,0,0" Grid.Row="1" Grid.Column="0" Grid.RowSpan="7" Grid.ColumnSpan="3" ScrollViewer.HorizontalScrollBarVisibility="Hidden" 
+                 ScrollViewer.VerticalScrollBarVisibility="Hidden" Background="{DynamicResource AccentColorBrush}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <TextBox x:Name="SelectedModule" Text="{Binding Path=Name}"/>
+                        <Button x:Name="SelectedModule" Content="{Binding Name}"/>
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
@@ -101,6 +101,6 @@
         </ListBox>
 
 
-        <ContentControl Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="6" Grid.RowSpan="7"  x:Name="ActiveItem"/>
+        <ContentControl Grid.Row="1" Grid.Column="3" Grid.ColumnSpan="6" Grid.RowSpan="7"  x:Name="ActiveItem"/>
     </Grid>
 </UserControl>
