--- a/Launcher/Launcher/Resources/Style.xaml
+++ b/Launcher/Launcher/Resources/Style.xaml
@@ -10,7 +10,7 @@
     <!--60% Выделение-->
     <Color x:Key="AccentColor2">#26A65B</Color>
     <!--40% -->
-    <Color x:Key="AccentColor3">#26A65B</Color> 
+    <Color x:Key="AccentColor3">#808080</Color> 
     <!--20% Наведение-->
     <Color x:Key="AccentColor4">#26A65B</Color>
 
