--- a/Launcher/Launcher/Resources/Style.xaml
+++ b/Launcher/Launcher/Resources/Style.xaml
@@ -4,15 +4,26 @@
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     mc:Ignorable="options">
 
-    <Color x:Key="HighlightColor">#008000</Color>
+    <!--<Color x:Key="HighlightColor">#008000</Color>
 
     <Color x:Key="AccentColor">#26A65B</Color>
-    <!--60% Выделение-->
+    --><!--60% Выделение--><!--
     <Color x:Key="AccentColor2">#26A65B</Color>
-    <!--40% -->
+    --><!--40% --><!--
     <Color x:Key="AccentColor3">#808080</Color> 
+    --><!--20% Наведение--><!--
+    <Color x:Key="AccentColor4">#61f2a5</Color>-->
+
+
+    <Color x:Key="HighlightColor">Black</Color>
+
+    <Color x:Key="AccentColor">Black</Color>
+    <!--60% Выделение-->
+    <Color x:Key="AccentColor2">White</Color>
+    <!--40% -->
+    <Color x:Key="AccentColor3">White</Color>
     <!--20% Наведение-->
-    <Color x:Key="AccentColor4">#26A65B</Color>
+    <Color x:Key="AccentColor4">White</Color>
 
     <!-- re-set brushes too -->
     <SolidColorBrush x:Key="HighlightBrush" Color="{StaticResource HighlightColor}" options:Freeze="True" />
