--- a/Launcher/Launcher.Module.Inspection/Views/MainInspectionView.xaml
+++ b/Launcher/Launcher.Module.Inspection/Views/MainInspectionView.xaml
@@ -3,9 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:dc="clr-namespace:DevComponents.WPF.Controls;assembly=DevComponents.WPF.Controls"
              xmlns:micro="http://www.caliburnproject.org"
              mc:Ignorable="d" 
-             d:DesignHeight="1000" d:DesignWidth="1000">
+             d:DesignHeight="1400" d:DesignWidth="1600">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="130"/>
@@ -52,6 +53,7 @@
                         <ListBoxItem Content="Фото" FontSize="22" Foreground="White" VerticalContentAlignment="Center" BorderBrush="Black" BorderThickness="3" Width="170" Margin="2">
                             <ListBoxItem.HorizontalContentAlignment>Center</ListBoxItem.HorizontalContentAlignment>
                         </ListBoxItem>
+                        <dc:CircularProgressControl Type="Basic" InnerRadius=".5" ValueStringFormat="%" RotationSpeedMultiplier="1.24" Width="170"/>
                         <ListBoxItem Content="Чертежи" FontSize="22" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" BorderThickness="3" Width="170"/>
                         <ListBoxItem Content="Документы" FontSize="22" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" BorderThickness="3" Width="170"/>
                         <ListBoxItem Background="#26A65B" Content="Без замечаний" FontSize="22" Foreground="White" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="Black" BorderThickness="3" Width="170"/>
