--- a/Launcher/Launcher/Views/ModuleListView.xaml
+++ b/Launcher/Launcher/Views/ModuleListView.xaml
@@ -2,13 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     
     <Grid>
         <ListBox x:Name="Modules" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" 
                  Background="{DynamicResource AccentColorBrush4}" BorderThickness="0" HorizontalContentAlignment="Stretch"  >
+
+
             <ListBox.Resources>
                 <Style TargetType="ListBoxItem">
                     <Style.Resources>
@@ -20,18 +23,18 @@
             </ListBox.Resources>
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
+                    <Border cal:Message.Attach="[Event MouseDown] = [Action OpenModule($dataContext)]">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="30"></RowDefinition>
                                 <RowDefinition></RowDefinition>
                                 <RowDefinition Height="5"></RowDefinition>
                             </Grid.RowDefinitions>
-                            <Label x:Name="SelectedModule" Grid.Row="0" Content="{Binding Name}" FontSize="20" FontFamily="Calibri Light" HorizontalAlignment="Center" />
+                            <Label Grid.Row="0" Content="{Binding Name}" FontSize="20" FontFamily="Calibri Light" HorizontalAlignment="Center" />
                             <TextBlock Grid.Row="1" Text="{Binding Description}" FontSize="15" FontFamily="Calibri" HorizontalAlignment="Center" />
                            
                         </Grid>
-                    </StackPanel>
+                    </Border>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
